--- a/public/index.html
+++ b/public/index.html
@@ -78,41 +78,7 @@
 				<svg class="icon icon-telegram ">
 					<use xlink:href="img/svg/sprite.svg#telegram"></use>
 				</svg></a>
-			</div><a class="link-modal-js" href="#modal-call">фывфывфыв</a>
-			<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/><span class="custom-input__text form-check-label">text</span>
-			</label><img src="img/@2x/r.jpg" alt=""><img src="img/@2x/webp/r.webp" alt=""><img src="img/@2x/002-book.png" alt=""><img src="img/@2x/webp/002-book.webp" alt="">
-			<div class="tabs tabs--js">
-				<div class="tabs__caption d-flex">
-					<div class="tabs__btn btn btn-success active"> btn  2 1
-					</div>
-					<div class="tabs__btn btn btn-success">btn 2  2
-					</div>
-					<div class="tabs__btn btn btn-success">btn 2  3
-					</div>
-					<div class="tabs__btn btn btn-success">btn  2 4
-					</div>
-				</div>
-				<div class="tabs__wrap">
-					<div class="tabs__content active">content 1
-					</div>
-					<div class="tabs__content">content 2
-					</div>
-					<div class="tabs__content">content 3
-					</div>
-					<div class="tabs__content">content 4
-					</div>
-				</div>
-				<div class="tabs__wrap">
-					<div class="tabs__content active">content 1
-					</div>
-					<div class="tabs__content">content 2
-					</div>
-					<div class="tabs__content">content 3
-					</div>
-					<div class="tabs__content">content 4
-					</div>
-				</div>
-			</div>
+			</div><a class="link-modal-js" href="#modal-call">фывфывфы</a>
 			<!-- start topLine-->
 			<section class="topLine section" id="topLine">
 				<div class="container">
