--- a/public/index.html
+++ b/public/index.html
@@ -488,7 +488,7 @@
 			</section>
 			<!-- end sOpportunity-->
 			<!-- start sCheck-->
-			<section class="sCheck section" id="sCheck">
+			<div class="sCheck section" id="sCheck">
 				<div class="sCheck__container container">
 					<div class="sCheck__row row">
 						<div class="col-sm-6 col-lg-3">
@@ -581,7 +581,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</div>
 			<!-- end sCheck-->
 			<!-- start sWho-->
 			<section class="sWho section" id="sWho">
@@ -721,7 +721,7 @@
 								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/>
 								</div>
 								<!-- +e.input-wrap-->
-								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="rel" type="rel" placeholder="Номер телефона"/>
+								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Номер телефона"/>
 								</div>
 								<!-- +e.input-wrap-->
 								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="email" type="email" placeholder="Ваш e-mail"/>
